--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+Html 
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -6,36 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
-
-<!-- LOGIN ------------------------------------------------------------ -->
-<div id="login-screen" class="login-screen">
-  <div class="login-box">
-    <h1>Terra do Sol</h1>
-    <p>Acesso restrito</p>
-
-    <input type="password" id="login-password" placeholder="Digite a senha" />
-    <button id="btn-login" class="primary">Entrar</button>
-
-    <p class="login-info">Senha padrão: <strong>supertds</strong></p>
-  </div>
-</div>
-
-<!-- APP --------------------------------------------------------------- -->
-<div id="app" style="display:none">
-
   <header class="app-header">
-    <div class="logo-mini">🌞</div>
+    <div class="logo-mini">
+      <span>🌞</span>
+    </div>
     <div class="title-group">
       <h1>Terra do Sol</h1>
-      <p>Gerenciador de Escalas</p>
+      <p>Escala de Almoço, Lanche e Aparadores</p>
     </div>
   </header>
 
   <nav class="tabs">
-    <button class="tab-button active" data-target="section-dashboard">Dashboard</button>
-    <button class="tab-button" data-target="section-equipe">Equipe</button>
+    <button class="tab-button active" data-target="section-equipe">Equipe</button>
     <button class="tab-button" data-target="section-dia">Escala do Dia</button>
     <button class="tab-button" data-target="section-semana">Semana</button>
     <button class="tab-button" data-target="section-historico">Histórico</button>
@@ -43,39 +27,14 @@
   </nav>
 
   <main>
-
-    <!-- DASHBOARD --------------------------------------------------- -->
-    <section id="section-dashboard" class="tab-section active">
-      <h2>Dashboard Geral</h2>
-
-      <div class="dashboard-grid">
-        <div class="dash-card">
-          <h3>Total de Colaboradores</h3>
-          <p id="db-total-func" class="dash-number">0</p>
-        </div>
-
-        <div class="dash-card">
-          <h3>Escalas Salvas</h3>
-          <p id="db-total-hist" class="dash-number">0</p>
-        </div>
-
-        <div class="dash-card">
-          <h3>Última Escala Gerada</h3>
-          <p id="db-ultima-data" class="dash-number-small">—</p>
-        </div>
-      </div>
-
-    </section>
-
-    <!-- EQUIPE -------------------------------------------------------- -->
-    <section id="section-equipe" class="tab-section">
+    <!-- EQUIPE -->
+    <section id="section-equipe" class="tab-section active">
       <h2>Cadastro de Equipe</h2>
-
       <form id="form-add-funcionario" class="card">
         <label for="nome-funcionario">Nome do colaborador</label>
         <div class="inline-form">
-          <input type="text" id="nome-funcionario" placeholder="Ex: João..." required />
-          <button type="submit" class="primary">Adicionar</button>
+          <input type="text" id="nome-funcionario" placeholder="Ex: João, Maria..." required />
+          <button type="submit">Adicionar</button>
         </div>
       </form>
 
@@ -85,102 +44,111 @@
           <span id="total-funcionarios" class="badge">0</span>
         </div>
         <ul id="lista-funcionarios" class="list"></ul>
+        <p class="tip">
+          Dica: cadastre todos os ajudantes, garçons e apoio da barraca.  
+          Depois, na aba <strong>Escala do Dia</strong>, você marca quem está presente.
+        </p>
       </div>
     </section>
 
-    <!-- ESCALA DO DIA ------------------------------------------------ -->
+    <!-- ESCALA DO DIA -->
     <section id="section-dia" class="tab-section">
       <h2>Escala do Dia</h2>
 
       <div class="card">
-        <label>Data da escala</label>
-        <input type="date" id="data-dia">
+        <label for="data-dia">Data da escala</label>
+        <input type="date" id="data-dia" />
       </div>
 
       <div class="card">
         <div class="card-header-row">
-          <h3>Quem está presente?</h3>
+          <h3>Quem está presente hoje?</h3>
           <span id="total-presentes" class="badge">0</span>
         </div>
         <ul id="lista-presenca" class="list"></ul>
+        <p class="tip">Marque apenas quem está trabalhando nesse dia.</p>
       </div>
 
       <div class="actions-row">
-        <button id="btn-gerar-dia" class="primary">Gerar escala</button>
+        <button id="btn-gerar-dia" class="primary">Gerar escala do dia</button>
         <button id="btn-salvar-dia" class="secondary" disabled>Salvar no histórico</button>
       </div>
 
       <section class="card preview-card">
-        <h3>Pré-visualização</h3>
+        <h3>Pré-visualização (igual à impressão)</h3>
         <div id="preview-dia" class="preview-area empty">
-          <p>Nenhuma escala gerada.</p>
+          <p>Nenhuma escala gerada ainda.</p>
         </div>
-        <button id="btn-imprimir-dia" class="primary" disabled>Imprimir</button>
+        <button id="btn-imprimir-dia" class="primary" disabled>Imprimir / PDF</button>
       </section>
     </section>
 
-    <!-- SEMANA -------------------------------------------------------- -->
+    <!-- ESCALA DA SEMANA -->
     <section id="section-semana" class="tab-section">
       <h2>Escala da Semana</h2>
-
       <div class="card">
-        <label>Data inicial</label>
-        <input type="date" id="data-semana">
+        <label for="data-semana">Data inicial</label>
+        <input type="date" id="data-semana" />
+        <p class="tip">O app gera 7 dias a partir dessa data.</p>
       </div>
 
       <div class="actions-row">
-        <button id="btn-gerar-semana" class="primary">Gerar Semana</button>
+        <button id="btn-gerar-semana" class="primary">Gerar escala da semana</button>
       </div>
 
       <section class="card preview-card">
         <h3>Pré-visualização da semana</h3>
         <div id="preview-semana" class="preview-area empty">
-          <p>Nenhuma escala semanal gerada.</p>
+          <p>Nenhuma escala semanal gerada ainda.</p>
         </div>
         <button id="btn-imprimir-semana" class="primary" disabled>Imprimir semana</button>
       </section>
     </section>
 
-    <!-- HISTÓRICO ----------------------------------------------------- -->
+    <!-- HISTÓRICO -->
     <section id="section-historico" class="tab-section">
       <h2>Histórico de Escalas</h2>
-
       <div class="card">
         <ul id="lista-historico" class="list"></ul>
+        <p class="tip">
+          Aqui ficam as escalas salvas.  
+          Você pode reabrir para visualizar e imprimir novamente.
+        </p>
       </div>
-
-      <button id="btn-apagar-historico" class="danger">Apagar tudo</button>
+      <div class="actions-row">
+        <button id="btn-apagar-historico" class="danger">Apagar todo histórico</button>
+      </div>
     </section>
 
-    <!-- CONFIGURAÇÕES ------------------------------------------------ -->
+    <!-- CONFIGURAÇÕES -->
     <section id="section-config" class="tab-section">
       <h2>Configurações</h2>
 
       <div class="card">
         <h3>Logo da barraca</h3>
+        <p>Escolha a imagem que vai sair no topo da impressão.</p>
         <input type="file" id="input-logo" accept="image/*" />
-        <div id="logo-preview-container" class="logo-preview"></div>
+        <div class="logo-preview-wrapper">
+          <div id="logo-preview-container" class="logo-preview">
+            <p>Nenhuma logo selecionada.</p>
+          </div>
+        </div>
         <button id="btn-remover-logo" class="secondary">Remover logo</button>
       </div>
 
       <div class="card">
         <h3>Rodízio</h3>
+        <p>
+          O app faz rodízio automático para não repetir sempre as mesmas pessoas nas mesmas funções.
+        </p>
         <button id="btn-reset-rodizio" class="secondary">Resetar rodízio</button>
       </div>
-
-      <div class="card">
-        <h3>Sair do aplicativo</h3>
-        <button id="btn-logout" class="danger">Sair</button>
-      </div>
     </section>
-
   </main>
 
-</div>
+  <!-- ÁREA DE IMPRESSÃO (dia ou semana) -->
+  <div id="print-area"></div>
 
-<div id="print-area"></div>
-
-<script src="script.js"></script>
-
+  <script src="script.js"></script>
 </body>
 </html>
